[project]
name = "dj-helper"
version = "0.1.0"
description = ""
authors = [
    {name = "Ignacio Archondo",email = "i.archondo@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"
pre-commit = "^4.3.0"
